<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jdbreport</groupId>
	<artifactId>jdbr-rt</artifactId>
	<version>3.0</version>
	<name>JDBReport</name> 
 
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<batik.version>1.7</batik.version>
		<org.apache.poi.version>3.9</org.apache.poi.version>
	</properties>

	<dependencies>
		<dependency> 
  			<groupId>org.slf4j</groupId>
  			<artifactId>jul-to-slf4j</artifactId>
  			<version>1.7.6</version>
		</dependency>

		<dependency>
			<groupId>org.glassfish</groupId>
			<artifactId>javax.el</artifactId>
			<version>3.0.0</version>
		</dependency>

		<dependency> 
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>
		 
		<dependency> 
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${org.apache.poi.version}</version>
		</dependency>

		<dependency>
			<groupId>com.lowagie</groupId> 
			<artifactId>itext</artifactId>
			<version>2.1.7</version> 
		</dependency>  

		<dependency>
			<groupId>com.itextpdf</groupId>
			<artifactId>itextpdf</artifactId>
			<version>5.0.6</version>
			<scope>provided</scope> 
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>

		<dependency>
  			<groupId>net.sourceforge.jeuclid</groupId>
  			<artifactId>jeuclid-core</artifactId>
  			<version>3.1.9</version>
  			<scope>provided</scope>
		</dependency>
		
		<dependency>
			<groupId>andkh.utils</groupId>
			<artifactId>andkh-utils</artifactId>
			<version>1.7-SNAPSHOT</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-svg-dom</artifactId>
			<version>${batik.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-svggen</artifactId>
			<version>${batik.version}</version>
		</dependency>
		
		</dependencies>
	
		<repositories>
		<repository>
			<id>repository.jboss.com</id>
			<name>Jboss Repository for Maven</name>
			<url>http://repository.jboss.com/maven2/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>maven2-repository</id>
			<name>Java.net Repository for Maven2</name>
			<url>http://repo2.maven.org/maven2</url>
			<layout>default</layout>
		</repository>
		<repository>
			<id>glassfish-repository</id>
			<name>Java.net Repository for Maven 2</name>
			<url>http://download.java.net/maven/glassfish</url>
			<layout>default</layout>
		</repository>
	</repositories>
		<build>
		<plugins>
		<plugin> 
            <inherited>true</inherited>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>

            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
		
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>	
